--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="app" class="gi-container ">
 
 
-                <div class="slide">
+                <div  @mouseover="stopSlide" @mouseleave="startSlide" class="slide">
                     <img :src="images[currentIndex].image" :alt="images[currentIndex].title">
                 </div>
                 <div class="text-slide  d-flex align-items-center justify-content-center flex-column">
